// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailVestiging should not render \`bijzondere rechtstoestand\` 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Vestiging label"
  title="Vestiging"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      label="KvK-nummer"
      value="123456"
    />
    <MapDetailAddressItem
      label="Bezoekadres"
      values={
        Object {
          "plaats": "Amsterdam",
        }
      }
    />
    <MapDetailVestigingActiviteitenItem
      activities={
        Array [
          Object {
            "sbiCode": "01",
            "sbiDescription": "SBI Description 1",
          },
          Object {
            "sbiCode": "02",
            "sbiDescription": "SBI Description 2",
          },
        ]
      }
    />
  </ul>
</MapDetailResultWrapper>
`;

exports[`MapDetailVestiging should render \`bijzondere rechtstoestand\` when \`surseance van betaling\` 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Vestiging label"
  title="Vestiging"
>
  <ul
    className="map-detail-result__list"
  >
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Surseance van betaling
      </Notification>
    </li>
    <MapDetailResultItem
      label="KvK-nummer"
      value="123456"
    />
    <MapDetailAddressItem
      label="Bezoekadres"
      values={
        Object {
          "plaats": "Amsterdam",
        }
      }
    />
    <MapDetailVestigingActiviteitenItem
      activities={
        Array [
          Object {
            "sbiCode": "01",
            "sbiDescription": "SBI Description 1",
          },
          Object {
            "sbiCode": "02",
            "sbiDescription": "SBI Description 2",
          },
        ]
      }
    />
    <MapDetailResultStatusItem
      label="Soort bijzondere rechtstoestand"
      status="alert"
      value="Surseance van betaling"
    />
  </ul>
</MapDetailResultWrapper>
`;

exports[`MapDetailVestiging should render everything 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Vestiging label"
  title="Vestiging"
>
  <ul
    className="map-detail-result__list"
  >
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Faillissement
      </Notification>
    </li>
    <MapDetailResultItem
      label="KvK-nummer"
      value="123456"
    />
    <MapDetailAddressItem
      label="Bezoekadres"
      values={
        Object {
          "plaats": "Amsterdam",
        }
      }
    />
    <MapDetailVestigingActiviteitenItem
      activities={
        Array [
          Object {
            "sbiCode": "01",
            "sbiDescription": "SBI Description 1",
          },
          Object {
            "sbiCode": "02",
            "sbiDescription": "SBI Description 2",
          },
        ]
      }
    />
    <MapDetailResultStatusItem
      label="Soort bijzondere rechtstoestand"
      status="alert"
      value="Faillissement"
    />
  </ul>
</MapDetailResultWrapper>
`;

exports[`MapDetailVestiging should render without label 1`] = `
<MapDetailResultWrapper
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle=""
  title="Vestiging"
>
  <Notification
    canClose={true}
    className=""
    level="info"
  >
    Medewerkers/ketenpartners van Gemeente Amsterdam kunnen inloggen om maatschappelijke activiteiten en vestigingen te bekijken.
  </Notification>
</MapDetailResultWrapper>
`;
